syntax = "proto3";

package SharpLife.Networking.Shared.Messages.NetworkStringLists;

message ListBinaryData
{
	//0 if null data (empty byte string)
	uint32 data_type = 1;

	bytes binary_data = 2;
}

//String index is local count + index in update
message ListStringData
{
	string value = 1;

	ListBinaryData binary_data = 2;
}

message ListStringDataUpdate
{
	uint32 index = 1;

	ListBinaryData binary_data = 2;
}

//Updates a specific network string list
message NetworkStringListFullUpdate
{
	uint32 list_id = 1;

	//Lets the client patch up the correct index for a table
	string name = 2;

	repeated ListStringData strings = 3;
}

message NetworkStringListUpdate
{
	uint32 list_id = 1;

	repeated ListStringData strings = 2;

	repeated ListStringDataUpdate updates = 3;
}

//Notifies the receiver that they've received all full updates
message NetworkStringListFullUpdatesComplete
{
}
